backup/default/deploy_anepal-nginx.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: '{"kind":"Deployment","apiVersion":"extensions/v1beta1","metadata":{"name":"anepal-nginx","creationTimestamp":null,"labels":{"app":"anepal-nginx","env":"prod","proj":"anepal"}},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"anepal-nginx","env":"prod","proj":"anepal"}},"template":{"metadata":{"name":"anepal-nginx","creationTimestamp":null,"labels":{"app":"anepal-nginx","env":"prod","proj":"anepal"}},"spec":{"volumes":[{"name":"nginx-ww [...]
  creationTimestamp: 2017-09-03T16:28:46Z
  generation: 2
  labels:
    app: anepal-nginx
    env: prod
    proj: anepal
  name: anepal-nginx
  namespace: default
  resourceVersion: "13733983"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/anepal-nginx
  uid: f556d232-90c4-11e7-83cd-000c29db7697
spec:
  replicas: 1
  selector:
    matchLabels:
      app: anepal-nginx
      env: prod
      proj: anepal
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: anepal-nginx
        env: prod
        proj: anepal
      name: anepal-nginx
    spec:
      containers:
      - image: nginx
        imagePullPolicy: IfNotPresent
        name: anepal-nginx
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        securityContext:
          privileged: false
        terminationMessagePath: /dev/termination-log
        volumeMounts:
        - mountPath: /data/www.ashishnepal.com/www/
          name: nginx-www-dir
        - mountPath: /etc/nginx
          name: nginx-config
        - mountPath: /data/logs/www.ashishnepal.com/nginx_log/
          name: nginx-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - hostPath:
          path: /data/registry_tikejhya/vol/www.ashishnepal.com/www
        name: nginx-www-dir
      - hostPath:
          path: /data/registry_tikejhya/nginx
        name: nginx-config
      - hostPath:
          path: /data/registry_tikejhya/vol/www.ashishnepal.com/logs/nginx_log/
        name: nginx-log
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2017-09-03T16:28:46Z
    lastUpdateTime: 2017-09-03T16:28:46Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 2
  replicas: 1
  updatedReplicas: 1
