backup/default/deploy_meotic-fpm.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: '{"kind":"Deployment","apiVersion":"extensions/v1beta1","metadata":{"name":"meotic-fpm","creationTimestamp":null,"labels":{"app":"meotic-fpm"}},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"meotic-fpm"}},"template":{"metadata":{"creationTimestamp":null,"labels":{"app":"meotic-fpm"}},"spec":{"volumes":[{"name":"phpfpm-config","hostPath":{"path":"/data/registry_tikejhya/php-fpm-meotic"}},{"name":"nginx-www-dir","hostPath":{"path":"/dat [...]
  creationTimestamp: 2017-08-20T12:12:20Z
  generation: 3
  labels:
    app: meotic-fpm
  name: meotic-fpm
  namespace: default
  resourceVersion: "13733906"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/meotic-fpm
  uid: d10d73f4-85a0-11e7-9a0f-000c29db7697
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meotic-fpm
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: meotic-fpm
    spec:
      containers:
      - image: kube-master01.tikejhya.com:5000/php-fpm7-mysqli:v1
        imagePullPolicy: IfNotPresent
        name: meotic-fpm
        ports:
        - containerPort: 9000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        volumeMounts:
        - mountPath: /data/www.meotic.com/www/
          name: nginx-www-dir
        - mountPath: /usr/local/etc
          name: phpfpm-config
        - mountPath: /data/logs
          name: phpfpm-logs
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - hostPath:
          path: /data/registry_tikejhya/php-fpm-meotic
        name: phpfpm-config
      - hostPath:
          path: /data/registry_tikejhya/vol/www.meotic.com/www
        name: nginx-www-dir
      - hostPath:
          path: /data/registry_tikejhya/vol/www.meotic.com/logs/fpm_log
        name: phpfpm-logs
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2017-08-20T12:12:20Z
    lastUpdateTime: 2017-08-20T12:12:20Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 3
  replicas: 1
  updatedReplicas: 1
