backup/default/deploy_meotic-nginx.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    deployment.kubernetes.io/selector-updated-at: 2017-09-02T01:41:17+01:00
    kubectl.kubernetes.io/last-applied-configuration: '{"kind":"Deployment","apiVersion":"extensions/v1beta1","metadata":{"name":"meotic-nginx","creationTimestamp":null,"labels":{"app":"meotic-nginx","env":"prod","proj":"anepal"}},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"meotic-nginx","env":"prod","proj":"anepal"}},"template":{"metadata":{"name":"meotic-nginx","creationTimestamp":null,"labels":{"app":"meotic-nginx","env":"prod","proj":"anepal"}},"spec":{"volumes":[{"name":"nginx-ww [...]
  creationTimestamp: 2017-08-20T12:12:52Z
  generation: 2
  labels:
    app: meotic-nginx
    env: prod
    proj: anepal
  name: meotic-nginx
  namespace: default
  resourceVersion: "13733970"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/meotic-nginx
  uid: e3eebeb4-85a0-11e7-9a0f-000c29db7697
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meotic-nginx
      env: prod
      proj: anepal
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: meotic-nginx
        env: prod
        proj: anepal
      name: meotic-nginx
    spec:
      containers:
      - image: nginx
        imagePullPolicy: IfNotPresent
        name: meotic-nginx
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        securityContext:
          privileged: false
        terminationMessagePath: /dev/termination-log
        volumeMounts:
        - mountPath: /data/www.meotic.com/www/
          name: nginx-www-dir
        - mountPath: /etc/nginx
          name: nginx-config-tikejhya
        - mountPath: /data/logs/www.meotic.com/nginx_log/
          name: nginx-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - hostPath:
          path: /data/registry_tikejhya/vol/www.meotic.com/www
        name: nginx-www-dir
      - hostPath:
          path: /data/registry_tikejhya/vol/www.meotic.com/logs/nginx_log/
        name: nginx-log
      - hostPath:
          path: /data/registry_tikejhya/meotic_nginx
        name: nginx-config-tikejhya
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2017-08-20T12:12:52Z
    lastUpdateTime: 2017-08-20T12:12:52Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 2
  replicas: 1
  updatedReplicas: 1
