backup/default/deploy_prometheus.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: 2017-09-04T01:39:00Z
  generation: 1
  labels:
    name: prometheus-deployment
  name: prometheus
  namespace: default
  resourceVersion: "13735289"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/prometheus
  uid: d3616f6d-9111-11e7-83cd-000c29db7697
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: prometheus
    spec:
      containers:
      - args:
        - -config.file=/etc/prometheus/prometheus.yml
        - -storage.local.path=/prometheus
        - -storage.local.retention=24h
        command:
        - /bin/prometheus
        image: quay.io/prometheus/prometheus:v1.0.1
        imagePullPolicy: IfNotPresent
        name: prometheus
        ports:
        - containerPort: 9090
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 2500Mi
          requests:
            cpu: 100m
            memory: 100Mi
        terminationMessagePath: /dev/termination-log
        volumeMounts:
        - mountPath: /prometheus
          name: data
        - mountPath: /etc/prometheus
          name: config-volume
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: data
      - configMap:
          defaultMode: 420
          name: prometheus-config
        name: config-volume
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2017-09-04T01:39:00Z
    lastUpdateTime: 2017-09-04T01:39:00Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  replicas: 1
  updatedReplicas: 1
