backup/default/deploy_tikejhya-fpm.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: '{"kind":"Deployment","apiVersion":"extensions/v1beta1","metadata":{"name":"tikejhya-fpm","creationTimestamp":null,"labels":{"app":"tikejhya-fpm"}},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"tikejhya-fpm"}},"template":{"metadata":{"creationTimestamp":null,"labels":{"app":"tikejhya-fpm"}},"spec":{"volumes":[{"name":"phpfpm-config","hostPath":{"path":"/data/registry_tikejhya/php-fpm_tikejhya"}},{"name":"nginx-www-dir","hostPath":{"p [...]
  creationTimestamp: 2017-09-03T18:01:02Z
  generation: 1
  labels:
    app: tikejhya-fpm
  name: tikejhya-fpm
  namespace: default
  resourceVersion: "13733901"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/tikejhya-fpm
  uid: d93b9834-90d1-11e7-83cd-000c29db7697
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tikejhya-fpm
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: tikejhya-fpm
    spec:
      containers:
      - image: kube-master01.tikejhya.com:5000/php-fpm7-mysqli:v1
        imagePullPolicy: IfNotPresent
        name: tikejhya-fpm
        ports:
        - containerPort: 9000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        volumeMounts:
        - mountPath: /data/www.tikejhya.com/www/
          name: nginx-www-dir
        - mountPath: /usr/local/etc
          name: phpfpm-config
        - mountPath: /data/logs
          name: phpfpm-logs
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - hostPath:
          path: /data/registry_tikejhya/php-fpm_tikejhya
        name: phpfpm-config
      - hostPath:
          path: /data/registry_tikejhya/vol/www.tikejhya.com/www
        name: nginx-www-dir
      - hostPath:
          path: /data/registry_tikejhya/vol/www.tikejhya.com/logs/fpm_log
        name: phpfpm-logs
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2017-09-03T18:01:02Z
    lastUpdateTime: 2017-09-03T18:01:02Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  replicas: 1
  updatedReplicas: 1
