backup/default/deploy_tikejhya-nginx.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: '{"kind":"Deployment","apiVersion":"extensions/v1beta1","metadata":{"name":"tikejhya-nginx","creationTimestamp":null,"labels":{"app":"tikejhya-nginx","env":"prod","proj":"tikejhya"}},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"tikejhya-nginx","env":"prod","proj":"tikejhya"}},"template":{"metadata":{"name":"tikejhya-nginx","creationTimestamp":null,"labels":{"app":"tikejhya-nginx","env":"prod","proj":"tikejhya"}},"spec":{"volumes":[{ [...]
  creationTimestamp: 2017-09-03T18:01:02Z
  generation: 1
  labels:
    app: tikejhya-nginx
    env: prod
    proj: tikejhya
  name: tikejhya-nginx
  namespace: default
  resourceVersion: "13733997"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/tikejhya-nginx
  uid: d955f4b6-90d1-11e7-83cd-000c29db7697
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tikejhya-nginx
      env: prod
      proj: tikejhya
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: tikejhya-nginx
        env: prod
        proj: tikejhya
      name: tikejhya-nginx
    spec:
      containers:
      - image: nginx
        imagePullPolicy: IfNotPresent
        name: tikejhya-nginx
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        securityContext:
          privileged: false
        terminationMessagePath: /dev/termination-log
        volumeMounts:
        - mountPath: /data/www.tikejhya.com/www/
          name: nginx-www-dir
        - mountPath: /data/logs/www.tikejhya.com/nginx_log/
          name: nginx-log
        - mountPath: /etc/nginx
          name: nginx-config-tikejhya
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - hostPath:
          path: /data/registry_tikejhya/vol/www.tikejhya.com/www
        name: nginx-www-dir
      - hostPath:
          path: /data/registry_tikejhya/vol/www.tikejhya.com/logs/nginx_log/
        name: nginx-log
      - hostPath:
          path: /data/registry_tikejhya/brand_nginx
        name: nginx-config-tikejhya
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2017-09-03T18:01:02Z
    lastUpdateTime: 2017-09-03T18:01:02Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  replicas: 1
  updatedReplicas: 1
