backup/default/svc_anepal-fpm.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: '{"kind":"Service","apiVersion":"v1","metadata":{"name":"anepal-fpm","creationTimestamp":null,"labels":{"app":"anepal-fpm"}},"spec":{"ports":[{"protocol":"TCP","port":9000,"targetPort":9000}],"selector":{"app":"anepal-fpm"},"type":"ClusterIP","sessionAffinity":"None"},"status":{"loadBalancer":{}}}'
  creationTimestamp: 2017-09-03T16:28:46Z
  labels:
    app: anepal-fpm
  name: anepal-fpm
  namespace: default
  resourceVersion: "13699607"
  selfLink: /api/v1/namespaces/default/services/anepal-fpm
  uid: f57b0308-90c4-11e7-83cd-000c29db7697
spec:
  clusterIP: 10.254.29.45
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: anepal-fpm
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
