backup/default/svc_anepal-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: '{"kind":"Service","apiVersion":"v1","metadata":{"name":"anepal-nginx","creationTimestamp":null,"labels":{"app":"anepal-nginx","env":"prod","proj":"anepal"}},"spec":{"ports":[{"protocol":"TCP","port":80,"targetPort":81,"nodePort":32597}],"selector":{"app":"anepal-nginx","env":"prod","proj":"anepal"},"type":"NodePort"},"status":{"loadBalancer":{}}}'
  creationTimestamp: 2017-09-03T16:40:25Z
  labels:
    app: anepal-nginx
    env: prod
    proj: anepal
  name: anepal-nginx
  namespace: default
  resourceVersion: "13697614"
  selfLink: /api/v1/namespaces/default/services/anepal-nginx
  uid: 96670732-90c6-11e7-83cd-000c29db7697
spec:
  clusterIP: 10.254.72.231
  ports:
  - nodePort: 32597
    port: 80
    protocol: TCP
    targetPort: 81
  selector:
    app: anepal-nginx
    env: prod
    proj: anepal
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
