backup/default/svc_kubernetes.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: 2017-04-30T12:49:59Z
  labels:
    component: apiserver
    provider: kubernetes
  name: kubernetes
  namespace: default
  resourceVersion: "596675"
  selfLink: /api/v1/namespaces/default/services/kubernetes
  uid: 85501fd9-2da3-11e7-a02b-000c29db7697
spec:
  clusterIP: 10.254.0.1
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  sessionAffinity: ClientIP
  type: ClusterIP
status:
  loadBalancer: {}
