backup/default/svc_meotic-fpm.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: '{"kind":"Service","apiVersion":"v1","metadata":{"name":"meotic-fpm","creationTimestamp":null,"labels":{"app":"meotic-fpm"}},"spec":{"ports":[{"protocol":"TCP","port":9000,"targetPort":9000}],"selector":{"app":"meotic-fpm"},"type":"ClusterIP","sessionAffinity":"None"},"status":{"loadBalancer":{}}}'
  creationTimestamp: 2017-08-20T12:12:28Z
  labels:
    app: meotic-fpm
  name: meotic-fpm
  namespace: default
  resourceVersion: "13539309"
  selfLink: /api/v1/namespaces/default/services/meotic-fpm
  uid: d5d1e9aa-85a0-11e7-9a0f-000c29db7697
spec:
  clusterIP: 10.254.190.7
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: meotic-fpm
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
