backup/default/svc_prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: '{"kind":"Service","apiVersion":"v1","metadata":{"name":"prometheus","creationTimestamp":null},"spec":{"ports":[{"port":80,"targetPort":9090,"nodePort":32514}],"selector":{"app":"prometheus"},"type":"NodePort"},"status":{"loadBalancer":{}}}'
  creationTimestamp: 2017-09-04T02:06:39Z
  name: prometheus
  namespace: default
  resourceVersion: "13737114"
  selfLink: /api/v1/namespaces/default/services/prometheus
  uid: b003c002-9115-11e7-83cd-000c29db7697
spec:
  clusterIP: 10.254.249.211
  ports:
  - nodePort: 32514
    port: 80
    protocol: TCP
    targetPort: 9090
  selector:
    app: prometheus
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
