backup/default/svc_tikejhya-fpm.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: '{"kind":"Service","apiVersion":"v1","metadata":{"name":"tikejhya-fpm","creationTimestamp":null,"labels":{"app":"tikejhya-fpm"}},"spec":{"ports":[{"protocol":"TCP","port":9000,"targetPort":9000}],"selector":{"app":"tikejhya-fpm"},"type":"ClusterIP","sessionAffinity":"None"},"status":{"loadBalancer":{}}}'
  creationTimestamp: 2017-09-03T18:01:02Z
  labels:
    app: tikejhya-fpm
  name: tikejhya-fpm
  namespace: default
  resourceVersion: "13703476"
  selfLink: /api/v1/namespaces/default/services/tikejhya-fpm
  uid: d9815a5b-90d1-11e7-83cd-000c29db7697
spec:
  clusterIP: 10.254.105.81
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: tikejhya-fpm
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
