backup/default/svc_tikejhya-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: '{"kind":"Service","apiVersion":"v1","metadata":{"name":"tikejhya-nginx","namespace":"default","creationTimestamp":null,"labels":{"app":"tikejhya-nginx","env":"prod","proj":"tikejhya"}},"spec":{"ports":[{"protocol":"TCP","port":80,"targetPort":80,"nodePort":32528}],"selector":{"app":"tikejhya-nginx","env":"prod","proj":"tikejhya"},"type":"LoadBalancer","sessionAffinity":"None"},"status":{"loadBalancer":{}}}'
  creationTimestamp: 2017-09-03T18:01:03Z
  labels:
    app: tikejhya-nginx
    env: prod
    proj: tikejhya
  name: tikejhya-nginx
  namespace: default
  resourceVersion: "13703481"
  selfLink: /api/v1/namespaces/default/services/tikejhya-nginx
  uid: d991cc71-90d1-11e7-83cd-000c29db7697
spec:
  clusterIP: 10.254.126.216
  ports:
  - nodePort: 32528
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: tikejhya-nginx
    env: prod
    proj: tikejhya
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
